welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: value or is not a member of Boolean
while (!estSurBiscuit or !estFaceMur) {
                      ^