welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();droite();
while (!estFaceMur) {
while (!estSurBiscuit or !estFaceMur) {
  	avance();
}
	prendBiscuit();
while (!estSurBiscuit) {
	recule();
}
	avance();
	poseBiscuit();
	avance();
}
droite();
avance();
gauche();
avance();
